Fix alignment for toggle arrow on tree view

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -29,6 +29,7 @@ body
 
     .node-wrapper
       padding-left: 5px !important
+      align-items: center !important
 
       &:hover
         background: #f9f9f9
